# knowledge-agents

./: .env.example  .gitignore  README.md  SETUP.md  pyproject.toml  requirement.txt
conf/: config.yml.sample  logger.ini
docs/: SHAREPOINT.md
examples/: README.md  sample_agent_config.json  sample_test_set.json
src/: main.py  openai_proxy.py  sample.py
src/common/: std.py
src/common/api/http/: client.py
src/db/: models.py  persistence.py
src/web/: dependencies.py  doc.py  exception.py  exception_handler.py  types.py
src/web/langchain/: dependencies.py  route.py  schemas.py  tools.py  util.py
src/web/langchain_confluence/: __init__.py  client.py  dependencies.py  ingest_service.py  repo.py  route.py  schemas.py  table.py  tools.py  util.py
src/web/langchain_document_supervisor/: __init__.py  dependencies.py  route.py  tools.py
src/web/langchain_jira/: __init__.py  chaser.py  client.py  dependencies.py  ingest_service.py  models.py  repo.py  route.py  schemas.py  tools.py  util.py
src/web/langchain_sharepoint/: __init__.py  client.py  dependencies.py  ingest_service.py  route.py  schemas.py  test.py  tools.py
src/web/langchain_team/: server.py
src/web/openai/: __init__.py  dependencies.py  exception.py  models.py  repo.py  route.py  schemas.py
src/web/persistence/: dependencies.py  route.py
src/web/scheduler/: __init__.py  dependencies.py
tests/: conftest.py  create_test_set.py  test_rag.py
